--- a/Bootstrap 5 crash course/index.html
+++ b/Bootstrap 5 crash course/index.html
@@ -12,8 +12,8 @@
 </head>
 
 <body>
-  <!-- navbar -->
-  <nav class="navbar navbar-expand-lg bg-dark navbar-dark py-3">
+  <!-- Navbar -->
+  <nav class="navbar navbar-expand-lg bg-dark navbar-dark py-3 fixed-top">
     <div class="container">
       <a href="#" class="navbar-brand">Frontend Bootcamp</a>
 
@@ -37,7 +37,7 @@
     </div>
   </nav>
 
-  <!-- showcase -->
+  <!-- Showcase -->
   <section class="bg-dark text-light p-5 p-lg-0 pt-lg-5 text-center text-sm-start">
     <div class="container">
       <div class="d-sm-flex align-items-center justify-content-between">
@@ -53,7 +53,7 @@
     </div>
   </section>
 
-  <!-- newsletter -->
+  <!-- Newsletter -->
   <section class="bg-primary text-light p-5">
     <div class="container">
       <div class="d-md-flex justify-content-between align-items-center">
@@ -67,10 +67,10 @@
     </div>
   </section>
 
-  <!-- boxes -->
-  <secont class="p-5">
+  <!-- Boxes -->
+  <section class="p-5">
     <div class="container">
-      <div class="row text-center">
+      <div class="row text-center g-4">
         <div class="col-md">
           <div class="card bg-dark text-light">
             <div class="card-body text-center">
@@ -87,11 +87,217 @@
             </div>
           </div>
         </div>
-        <div class="col-md">#</div>
-        <div class="col-md">#</div>
+        <div class="col-md">
+          <div class="card bg-secondary text-light">
+            <div class="card-body text-center">
+              <div class="h1 mb-3">
+                <i class="bi bi-person-square"></i>
+              </div>
+              <h3 class="card-title mb-3">
+                Hybrid
+              </h3>
+              <p class="card-text">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab repellendus possimus odio, aspernatur quasi est.
+              </p>
+              <a href="#" class="btn btn-dark">Read More</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-md">
+          <div class="card bg-dark text-light">
+            <div class="card-body text-center">
+              <div class="h1 mb-3">
+                <i class="bi bi-people"></i>
+              </div>
+              <h3 class="card-title mb-3">
+                In Person
+              </h3>
+              <p class="card-text">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab repellendus possimus odio, aspernatur quasi est.
+              </p>
+              <a href="#" class="btn btn-primary">Read More</a>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
-  </secont>
+  </section>
+
+  <!-- Learn Sections -->
+  <section id="learn" class="p-5">
+    <div class="container">
+      <div class="row align-items-center justify-content-between">
+        <div class="col-md">
+          <img src="img/undraw_static_assets_rpm6.svg" class="img-fluid" alt="#">
+        </div>
+        <div class="col-md p-5">
+          <h2>Learn The Fundamentals</h2>
+          <p class="lead">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum obcaecati nulla explicabo, at molestias laborum.
+          </p>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Suscipit, delectus? Facere autem aspernatur minima esse rerum accusamus, cupiditate nihil sit magnam nesciunt asperiores, a corrupti, possimus quasi nostrum dignissimos itaque.
+          </p>
+          <a href="#" class="btn btn-light mt-3">
+            <i class="bi bi-chevron-right">Read More</i>
+          </a>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section id="learn" class="p-5 bg-dark text-light">
+    <div class="container">
+      <div class="row align-items-center justify-content-between">
+        <div class="col-md p-5">
+          <h2>Learn React</h2>
+          <p class="lead">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum obcaecati nulla explicabo, at molestias laborum.
+          </p>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Suscipit, delectus? Facere autem aspernatur minima esse rerum accusamus, cupiditate nihil sit magnam nesciunt asperiores, a corrupti, possimus quasi nostrum dignissimos itaque.
+          </p>
+          <a href="#" class="btn btn-light mt-3">
+            <i class="bi bi-chevron-right">Read More</i>
+          </a>
+        </div>
+        <div class="col-md">
+          <img src="img/undraw_react_y-7-wq.svg" class="img-fluid" alt="#">
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- Question Accordion -->
+  <section id="questions" class="p-5">
+    <div class="container">
+      <h2 class="text-center mb-4">Frequently Asked Questions</h2>
+      <div class="accordion accordion-flush" id="questions">
+        <!-- Item 1 -->
+        <div class="accordion-item">
+          <h2 class="accordion-header">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#question-one" aria-expanded="false" aria-controls="flush-collapseOne">
+              Where exactly are you located?
+            </button>
+          </h2>
+          <div id="question-one" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#questions">
+            <div class="accordion-body">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur alias cum voluptatum repellat deleniti reiciendis, modi ipsum rerum velit ducimus! Officiis minima similique nobis amet nostrum qui quaerat tenetur facilis totam unde dignissimos ullam dolor, autem ratione at possimus neque. Ut molestiae, inventore pariatur hic deleniti quisquam veniam veritatis quibusdam.</div>
+          </div>
+        </div>
+        <!-- Item 2 -->
+        <div class="accordion-item">
+          <h2 class="accordion-header">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#question-two" aria-expanded="false" aria-controls="flush-collapseOne">
+              How much does it cost to attend?
+            </button>
+          </h2>
+          <div id="question-two" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#questions">
+            <div class="accordion-body">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur alias cum voluptatum repellat deleniti reiciendis, modi ipsum rerum velit ducimus! Officiis minima similique nobis amet nostrum qui quaerat tenetur facilis totam unde dignissimos ullam dolor, autem ratione at possimus neque. Ut molestiae, inventore pariatur hic deleniti quisquam veniam veritatis quibusdam.</div>
+          </div>
+        </div>
+        <!-- Item 3 -->
+        <div class="accordion-item">
+          <h2 class="accordion-header">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#question-three" aria-expanded="false" aria-controls="flush-collapseOne">
+              What do I need to know?
+            </button>
+          </h2>
+          <div id="question-three" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#questions">
+            <div class="accordion-body">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur alias cum voluptatum repellat deleniti reiciendis, modi ipsum rerum velit ducimus! Officiis minima similique nobis amet nostrum qui quaerat tenetur facilis totam unde dignissimos ullam dolor, autem ratione at possimus neque. Ut molestiae, inventore pariatur hic deleniti quisquam veniam veritatis quibusdam.</div>
+          </div>
+        </div>
+        <!-- Item 4 -->
+        <div class="accordion-item">
+          <h2 class="accordion-header">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#question-four" aria-expanded="false" aria-controls="flush-collapseOne">
+              How do I sign up?
+            </button>
+          </h2>
+          <div id="question-four" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#questions">
+            <div class="accordion-body">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur alias cum voluptatum repellat deleniti reiciendis, modi ipsum rerum velit ducimus! Officiis minima similique nobis amet nostrum qui quaerat tenetur facilis totam unde dignissimos ullam dolor, autem ratione at possimus neque. Ut molestiae, inventore pariatur hic deleniti quisquam veniam veritatis quibusdam.</div>
+          </div>
+        </div>
+        <!-- Item 5 -->
+        <div class="accordion-item">
+          <h2 class="accordion-header">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#question-five" aria-expanded="false" aria-controls="flush-collapseOne">
+              Will you help me find a job?
+            </button>
+          </h2>
+          <div id="question-five" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#questions">
+            <div class="accordion-body">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur alias cum voluptatum repellat deleniti reiciendis, modi ipsum rerum velit ducimus! Officiis minima similique nobis amet nostrum qui quaerat tenetur facilis totam unde dignissimos ullam dolor, autem ratione at possimus neque. Ut molestiae, inventore pariatur hic deleniti quisquam veniam veritatis quibusdam.</div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section id="instructors" class="p-5 bg-primary">
+    <div class="container">
+      <h2 class="text-center text-white">Our Instructors</h2>
+      <p class="lead text-center text-white mb-5">
+        Our instructors all have 5+ years working as a web developer in the industry.
+      </p>
+      <div class="row g-4">
+        <!-- Instructor 1 -->
+        <div class="col-md-6 col-lg-3">
+          <div class="card bg-light">
+            <div class="card-body text-center">
+              <img src="https://randomuser.me/api/portraits/men/11.jpg" class="rounded-circle mb-3" alt="#">
+              <h3 class="card-title mb-3">John Doe</h3>
+              <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. A fuga molestias ullam! Dolore, hic, temporibus.</p>
+              <a href="#"><i class="bi bi-twitter text-dark mx-1"></i></a>
+              <a href="#"><i class="bi bi-facebook text-dark mx-1"></i></a>
+              <a href="#"><i class="bi bi-linkedin text-dark mx-1"></i></a>
+              <a href="#"><i class="bi bi-instagram text-dark mx-1"></i></a>
+            </div>
+          </div>
+        </div>
+        <!-- Instructor 2 -->
+        <div class="col-md-6 col-lg-3">
+          <div class="card bg-light">
+            <div class="card-body text-center">
+              <img src="https://randomuser.me/api/portraits/women/14.jpg" class="rounded-circle mb-3" alt="#">
+              <h3 class="card-title mb-3">Jane Doe</h3>
+              <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. A fuga molestias ullam! Dolore, hic, temporibus.</p>
+              <a href="#"><i class="bi bi-twitter text-dark mx-1"></i></a>
+              <a href="#"><i class="bi bi-facebook text-dark mx-1"></i></a>
+              <a href="#"><i class="bi bi-linkedin text-dark mx-1"></i></a>
+              <a href="#"><i class="bi bi-instagram text-dark mx-1"></i></a>
+            </div>
+          </div>
+        </div>
+        <!-- Instructor 3 -->
+        <div class="col-md-6 col-lg-3">
+          <div class="card bg-light">
+            <div class="card-body text-center">
+              <img src="https://randomuser.me/api/portraits/men/12.jpg" class="rounded-circle mb-3" alt="#">
+              <h3 class="card-title mb-3">Steve Smith</h3>
+              <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. A fuga molestias ullam! Dolore, hic, temporibus.</p>
+              <a href="#"><i class="bi bi-twitter text-dark mx-1"></i></a>
+              <a href="#"><i class="bi bi-facebook text-dark mx-1"></i></a>
+              <a href="#"><i class="bi bi-linkedin text-dark mx-1"></i></a>
+              <a href="#"><i class="bi bi-instagram text-dark mx-1"></i></a>
+            </div>
+          </div>
+        </div>
+        <!-- Instructor 4 -->
+        <div class="col-md-6 col-lg-3">
+          <div class="card bg-light">
+            <div class="card-body text-center">
+              <img src="https://randomuser.me/api/portraits/women/13.jpg" class="rounded-circle mb-3" alt="#">
+              <h3 class="card-title mb-3">Sarah Smith</h3>
+              <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. A fuga molestias ullam! Dolore, hic, temporibus.</p>
+              <a href="#"><i class="bi bi-twitter text-dark mx-1"></i></a>
+              <a href="#"><i class="bi bi-facebook text-dark mx-1"></i></a>
+              <a href="#"><i class="bi bi-linkedin text-dark mx-1"></i></a>
+              <a href="#"><i class="bi bi-instagram text-dark mx-1"></i></a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
 
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
