--- a/Bootstrap 5 crash course/index.html
+++ b/Bootstrap 5 crash course/index.html
@@ -46,7 +46,7 @@
           <p class="lead my-4">
             We focus on teaching our students the fundamentals of the latest and greatest technologies to prepare them for their first dev role.
           </p>
-          <button class="btn btn-primary btn-lg">Start The Enrollment</button>
+          <button class="btn btn-primary btn-lg" data-bs-toggle="modal" data-bs-target="#enroll">Start The Enrollment</button>
         </div>
         <img class="img-fluid w-50 d-none d-sm-block" src="img/undraw_coding_re_iv62.svg" alt="#">
       </div>
@@ -181,7 +181,8 @@
             </button>
           </h2>
           <div id="question-one" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#questions">
-            <div class="accordion-body">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur alias cum voluptatum repellat deleniti reiciendis, modi ipsum rerum velit ducimus! Officiis minima similique nobis amet nostrum qui quaerat tenetur facilis totam unde dignissimos ullam dolor, autem ratione at possimus neque. Ut molestiae, inventore pariatur hic deleniti quisquam veniam veritatis quibusdam.</div>
+            <div class="accordion-body">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur alias cum voluptatum repellat deleniti reiciendis, modi ipsum rerum velit ducimus! Officiis minima similique nobis amet nostrum qui quaerat
+              tenetur facilis totam unde dignissimos ullam dolor, autem ratione at possimus neque. Ut molestiae, inventore pariatur hic deleniti quisquam veniam veritatis quibusdam.</div>
           </div>
         </div>
         <!-- Item 2 -->
@@ -192,7 +193,8 @@
             </button>
           </h2>
           <div id="question-two" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#questions">
-            <div class="accordion-body">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur alias cum voluptatum repellat deleniti reiciendis, modi ipsum rerum velit ducimus! Officiis minima similique nobis amet nostrum qui quaerat tenetur facilis totam unde dignissimos ullam dolor, autem ratione at possimus neque. Ut molestiae, inventore pariatur hic deleniti quisquam veniam veritatis quibusdam.</div>
+            <div class="accordion-body">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur alias cum voluptatum repellat deleniti reiciendis, modi ipsum rerum velit ducimus! Officiis minima similique nobis amet nostrum qui quaerat
+              tenetur facilis totam unde dignissimos ullam dolor, autem ratione at possimus neque. Ut molestiae, inventore pariatur hic deleniti quisquam veniam veritatis quibusdam.</div>
           </div>
         </div>
         <!-- Item 3 -->
@@ -203,7 +205,8 @@
             </button>
           </h2>
           <div id="question-three" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#questions">
-            <div class="accordion-body">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur alias cum voluptatum repellat deleniti reiciendis, modi ipsum rerum velit ducimus! Officiis minima similique nobis amet nostrum qui quaerat tenetur facilis totam unde dignissimos ullam dolor, autem ratione at possimus neque. Ut molestiae, inventore pariatur hic deleniti quisquam veniam veritatis quibusdam.</div>
+            <div class="accordion-body">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur alias cum voluptatum repellat deleniti reiciendis, modi ipsum rerum velit ducimus! Officiis minima similique nobis amet nostrum qui quaerat
+              tenetur facilis totam unde dignissimos ullam dolor, autem ratione at possimus neque. Ut molestiae, inventore pariatur hic deleniti quisquam veniam veritatis quibusdam.</div>
           </div>
         </div>
         <!-- Item 4 -->
@@ -214,7 +217,8 @@
             </button>
           </h2>
           <div id="question-four" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#questions">
-            <div class="accordion-body">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur alias cum voluptatum repellat deleniti reiciendis, modi ipsum rerum velit ducimus! Officiis minima similique nobis amet nostrum qui quaerat tenetur facilis totam unde dignissimos ullam dolor, autem ratione at possimus neque. Ut molestiae, inventore pariatur hic deleniti quisquam veniam veritatis quibusdam.</div>
+            <div class="accordion-body">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur alias cum voluptatum repellat deleniti reiciendis, modi ipsum rerum velit ducimus! Officiis minima similique nobis amet nostrum qui quaerat
+              tenetur facilis totam unde dignissimos ullam dolor, autem ratione at possimus neque. Ut molestiae, inventore pariatur hic deleniti quisquam veniam veritatis quibusdam.</div>
           </div>
         </div>
         <!-- Item 5 -->
@@ -225,7 +229,8 @@
             </button>
           </h2>
           <div id="question-five" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#questions">
-            <div class="accordion-body">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur alias cum voluptatum repellat deleniti reiciendis, modi ipsum rerum velit ducimus! Officiis minima similique nobis amet nostrum qui quaerat tenetur facilis totam unde dignissimos ullam dolor, autem ratione at possimus neque. Ut molestiae, inventore pariatur hic deleniti quisquam veniam veritatis quibusdam.</div>
+            <div class="accordion-body">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur alias cum voluptatum repellat deleniti reiciendis, modi ipsum rerum velit ducimus! Officiis minima similique nobis amet nostrum qui quaerat
+              tenetur facilis totam unde dignissimos ullam dolor, autem ratione at possimus neque. Ut molestiae, inventore pariatur hic deleniti quisquam veniam veritatis quibusdam.</div>
           </div>
         </div>
       </div>
@@ -299,8 +304,83 @@
     </div>
   </section>
 
+  <!-- Contact & Map -->
+  <section class="p-5">
+    <div class="container">
+      <div class="row g-4">
+        <div class="col-md">
+          <h2 class="text-center mb-4">Contact Info</h2>
+          <ul class="list-group list-group-flush lead">
+            <li class="list-group-item">
+              <span class="fw-bold">Main Location:</span> 50 Main St Boston, MA
+            </li>
+            <li class="list-group-item">
+              <span class="fw-bold">Enrollment Phone:</span> 555-555-5555
+            </li>
+            <li class="list-group-item">
+              <span class="fw-bold">Student Phone:</span> 555-555-5555
+            </li>
+            <li class="list-group-item">
+              <span class="fw-bold">Enrollment Email:</span> email@gmail.com
+            </li>
+            <li class="list-group-item">
+              <span class="fw-bold">Student Email:</span> email@gmail.com
+            </li>
+          </ul>
+        </div>
+        <div class="col-md">
+          <img class="p-5" src="img/google-icon-map-0.jpg" alt="#">
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <footer class="p-5 bg-dark text-white text-center position-relative">
+    <div class="container">
+      <p class="lead">Copyright &copy; 2021 Frontend Bootcamp</p>
+      <a href="#" class="position-absolute bottom-0 end-0 p-5">
+        <i class="bi bi-arrow-up-circle h1"></i>
+      </a>
+    </div>
+  </footer>
+
+  <!-- Modal -->
+  <div class="modal fade" id="enroll" tabindex="-1" role="dialog" aria-labelledby="enrollLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="enrollLabel">Modal title</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          <p class="lead">Fill out this form and we will get back to you</p>
+          <form>
+            <div class="mb-3">
+              <label for="first-name" class="col-form-label">First Name:</label> <input type="text" class="form-control" id="first-name">
+            </div>
+            <div class="mb-3">
+              <label for="last-name" class="col-form-label">Last Name:</label> <input type="text" class="form-control" id="last-name">
+            </div>
+            <div class="mb-3">
+              <label for="email" class="col-form-label">Email:</label> <input type="email" class="form-control" id="email">
+            </div>
+            <div class="mb-3">
+              <label for="phone" class="col-form-label">Phone:</label> <input type="tel" class="form-control" id="phone">
+            </div>
+          </form>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+          <button type="button" class="btn btn-primary">Submit</button>
+        </div>
+      </div>
+    </div>
+  </div>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+
 </body>
 
 
